--- a/libs/templates/addon/queues/consumer/reconect.go.template
+++ b/libs/templates/addon/queues/consumer/reconect.go.template
@@ -6,7 +6,7 @@ import (
 )
 
 func handleConnectionLost(minTime, maxTime int) {
-	fmt.Println("[x] AMQP Server down starting recover system")
+	fmt.Println("[x] AMQP Server down, starting recover system")
 	sleepTime := minTime
 
 	for {
