--- a/libs/templates/base/routes/mainRoutes.go.template
+++ b/libs/templates/base/routes/mainRoutes.go.template
@@ -10,5 +10,5 @@ func Setup(app *fiber.App) {
 	api := app.Group("/api/v1")
 
 	api.Get("/test", controllers.Test)
-	api.Post("/testRoute", controllers.TestRoute)
+	api.Post("/test", controllers.TestPost)
 }
