--- a/libs/templates/base/routes/mainRoutes.go.template
+++ b/libs/templates/base/routes/mainRoutes.go.template
@@ -9,6 +9,6 @@ import (
 func Setup(app *fiber.App) {
 	api := app.Group("/api/v1")
 
-	api.Get("/test", controllers.Test)
+	api.Get("/test", controllers.TestGet)
 	api.Post("/test", controllers.TestPost)
 }
