Fixed templates to addecuate them to mks extension readme

--- a/templates/addons/grpc_client/connections.grpc_client.template
+++ b/templates/addons/grpc_client/connections.grpc_client.template
@@ -1,8 +1,8 @@
 package connections
 
 import (
-	pb "%PACKAGE_NAME%/src/proto"
-	"%PACKAGE_NAME%/src/utils"
+	pb "%%PACKAGE_NAME%%/src/proto"
+	"%%PACKAGE_NAME%%/src/utils"
 	"context"
 	"time"
 
