--- a/templates/addons/jwt/middlewares.auth.template
+++ b/templates/addons/jwt/middlewares.auth.template
@@ -3,6 +3,7 @@ package middlewares
 import (
 	"%%PACKAGE_NAME%%/src/utils"
 	"strconv"
+	"time"
 
 	"github.com/gofiber/fiber/v2"
 	"github.com/golang-jwt/jwt/v4"
@@ -39,4 +40,26 @@ func IsAuthenticated(c *fiber.Ctx) error {
 
 	c.Context().SetUserValue("userId", uint(id))
 	return c.Next()
+}
+
+func GenerateJWT(id uint, keeplogin bool, ipAddress string) (string, error) {
+	// Generate date depending on keeplogin
+	date := jwt.NewNumericDate(time.Now().Add(time.Hour * 24)) // JWT Have 1 day of duration
+
+	if keeplogin {
+		date = jwt.NewNumericDate(time.Now().Add(time.Hour * 24 * 7)) // JWT Have 1 week of duration
+	}
+
+	// Creating custom claims
+	claims := jwt.MapClaims{
+		"iss": strconv.Itoa(int(id)),
+		"exp": date.Unix(),
+		"data": map[string]string{
+			"ip": ipAddress,
+		},
+	}
+
+	token, err := jwt.NewWithClaims(jwt.SigningMethodHS256, claims).SignedString([]byte(utils.ENV.APP_JWT_KEY))
+
+	return token, err
 }
