Added package mks loadpackage and unloadpackage to base main template

--- a/templates/base/src/main.template
+++ b/templates/base/src/main.template
@@ -17,5 +17,12 @@ func main() {
 	// Creating waitgroup
 	mks_modules.WaitGroup = new(sync.WaitGroup)
 
+	// Load all mks_modules
+	mks_modules.LoadModules()
+
+	// Wait WaitGroup task finish
 	mks_modules.WaitGroup.Wait()
+
+	// Unload all mks_modules
+	mks_modules.UnloadModules()
 }
